# mcps

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/superpowers/plans/: 2026-05-16-mcps-monorepo.md
docs/superpowers/specs/: 2026-05-16-mcps-monorepo-design.md
mcp_servers/mcp_hello/: hello.py  pyproject.toml
mcp_servers/mcp_hello/tests/: test_hello.py
mcp_servers/mcp_serverchan3/: README.md  pyproject.toml  serverchan3.py
mcp_servers/mcp_serverchan3/tests/: test_serverchan3.py
mcp_servers/mcp_serverchan_turbo/: README.md  pyproject.toml  serverchan_turbo.py
mcp_servers/mcp_serverchan_turbo/tests/: test_serverchan_turbo.py
scripts/: add-mcp.sh
