[project]
name = "mcp-serverchan3"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["fastmcp>=2.0", "httpx", "loguru"]

[project.scripts]
mcp-serverchan3 = "serverchan3:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["serverchan3"]
